# market-access-api

./: .flake8  .gitignore  .pre-commit-config.yaml  .profile  CODEOWNERS  Dockerfile  Makefile  Procfile  README.md  barrier_embeddings_df.pkl  barrier_similarity_scores_df.json  conftest.py  docker-compose.env  docker-compose.env.sample  docker-compose.local-template.env  docker-compose.yml  manage.py  manifest.yml  pyproject.toml  pytest.ini  readme.md  requirements-app.txt  requirements-ml.txt  requirements-related-barriers.txt  requirements-test.txt  requirements.txt  run.sh  setup.cfg  start-wait-for-db.sh  start.sh
.circleci/: config.yml
.copilot/: config.yml  image_build_run.sh
.github/workflows/: recreate-poetry-requirements.yml
api/action_plans/: apps.py  constants.py  models.py  serializers.py  urls.py  views.py
api/assessment/: __init__.py  admin.py  apps.py  constants.py  exceptions.py  fields.py  models.py  serializers.py  urls.py  utils.py  views.py
api/barrier_downloads/: apps.py  constants.py  exceptions.py  models.py  serializers.py  service.py  tasks.py  urls.py  views.py
api/barrier_reports/: apps.py  constants.py  csv.py  exceptions.py  models.py  serializers.py  service.py  tasks.py  urls.py  views.py
api/barriers/: ExampleThing.md  __init__.py  admin.py  apps.py  barrier_cache.py  cache.py  company.py  csv.py  exceptions.py  fields.py  filters.py  helpers.py  history_items.py  mixins.py  models.py  public_data.py  related_barrier.py  report_stages.py  serializers.py  tasks.py  urls.py  utils.py  validators.py  views.py
api/collaboration/: apps.py  mixins.py  models.py  serializers.py  urls.py  views.py
api/commodities/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
api/core/: admin.py  apps.py  auth.py  date_utils.py  exceptions.py  middleware.py  models.py  permissions.py  test_utils.py  utils.py  validate_utils.py  views.py  viewsets.py
api/dashboard/: apps.py  service.py  tasks.py  urls.py  views.py
api/dataset/: apps.py  pagination.py  serializers.py  service.py  table_schemas.py  urls.py  views.py
api/documents/: admin.py  apps.py  av_scan.py  exceptions.py  fields.py  models.py  tasks.py  utils.py  views.py
api/feature_flags/: apps.py  models.py  serializers.py  urls.py  views.py
api/feedback/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/healthcheck/: README.md  urls.py  views.py
api/history/: exceptions.py  manager.py  models.py  utils.py
api/hs_codes/: serializers.py  views.py
api/interactions/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/metadata/: admin.py  apps.py  constants.py  fields.py  models.py  serializers.py  utils.py  views.py
api/ping/: services.py  views.py
api/pingdom/: apps.py  services.py  urls.py  views.py
api/related_barriers/: apps.py  client.py  constants.py  manager.py  model.py  serializers.py  service.py  tariff_search.py  tasks.py  urls.py  views.py
api/reports/: models.py  serializers.py  stage_fields.py  stage_fields.yml  validators.py  views.py
api/user/: admin.py  apps.py  authentication.py  backend.py  backends.py  constants.py  fix_bad_user_helper.py  helpers.py  middleware.py  models.py  permissions.py  serializers.py  staff_sso.py  tasks.py  urls.py  utils.py  views.py
api/user_event_log/: admin.py  apps.py  constants.py  models.py  utils.py
api/wto/: fields.py  models.py  serializers.py
comtrade_db/: db.dump.sql  init-db.sh
config/: __init__.py  celery.py  sample.env  settings.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  local.py  local_test.py  production.py  staging.py  test.py  uat.py
config/static/: administrative-area.json  country.json  sector.json  todo.py
contrade_db/: Dockerfile  db.dump.sql
database_routers/: default.py
docker/local/: Dockerfile  entrypoint.sh
notebooks/: Assessments.ipynb
tests/: base.py
tests/action_plans/: factories.py  test_action_plan_filters.py  test_action_plan_stakeholders.py
tests/assessment/: factories.py  test_assessment.py  test_assessment_utils.py  test_economic_assessments.py  test_economic_impact_assessments.py  test_preliminary_assessments.py  test_resolvability_assessments.py  test_strategic_assessments.py
tests/barrier_downloads/: conftest.py  test_csv.py  test_csv_export.py  test_new_serializer.py  test_serializer_query_count.py  test_service.py  test_views.py
tests/barrier_reports/: test_csv.py  test_csv_export.py  test_service.py  test_views.py
tests/barriers/: factories.py  test_activity.py  test_barrier_details.py  test_barrier_request_download.py  test_create_mock_barriers.py  test_csv.py  test_csv_export.py  test_daily_inactivity_functions.py  test_data_anonymise.py  test_data_workspace.py  test_datawarehouse.py  test_estimated_resolution_date_request.py  test_history.py  test_history_endpoint_response.py  test_inactivity_functions.py  test_inactivity_reminders.py  test_list_barriers.py  test_list_barriers_ordering.py  test_list_reports.py  test_models.py  test_modified_by.py  test_next_steps_items.py  test_progress_updates.py  test_public_barriers.py  test_report_details.py  test_report_progress.py  test_signals.py  test_status_history.py  test_submit_report.py  test_tags.py  test_ugly_hack_fixing_modified_on_field.py  test_utils.py
tests/collaboration/: factories.py  test_team_members.py
tests/commodities/: test_commodities.py
tests/dashboard/: test_queries.py  test_tasks.py  test_views.py
tests/dataset/: test_views.py
tests/documents/: factories.py  test_av_scan.py  test_tasks.py  test_views.py
tests/feature_flags/: test_feature_flags.py
tests/feedback/: test_views.py
tests/healthcheck/: test_middleware.py  test_views.py
tests/history/: conftest.py  constants.py  factories.py  test_deprecated_fields.py  test_enrichment.py  test_m2m.py  test_service.py  test_service_for_barrier_model.py  test_service_group_by.py
tests/interactions/: factories.py  test_interactions.py  test_mentions.py  test_notifications.py  test_public_barrier_notes.py
utils/: middleware.py
(+747 files in other folders)
