[tool.poetry]
name = "market-access-api"
version = "0.61.00"
description = "Market Access API"
authors = ["Ferenc Csepregi <feri@31.digital>", "James Pacileo <jamespaxi@gmail.com>", "Ciaran Dohety <cad106uk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "~=1.17.86"
celery = "==4.4.5"
dj-database-url = "==0.5.0"
Django = "==3.2.5"
django-audit-log-middleware = "0.0.4"
django-celery-beat = "2.0.0"
django-environ = "==0.4.5"
django-extensions = "==3.0.9"
django-filter = "==2.4.0"
django-log-formatter-ecs = "==0.0.5"
django-model-utils = "==4.0.0"
django-oauth-toolkit = "==1.3.2"
django-ordered-model = "==3.4.1"
django-pglocks = "==1.0.4"
django-redis = "==4.12.1"
django-simple-history = "==2.11.0"
django-staff-sso-client = "==3.1.0"
djangorestframework = "==3.12.1"
elastic-apm = "~=6.3.0"
gevent = "==20.9.0"
gunicorn = "==20.0.4"
hawkrest = "==1.0.1"
notifications-python-client = "==6.0.2"
psycopg2-binary = "==2.8.6"
python-json-logger = "==2.0.0"
raven = "==6.9.0"
requests-toolbelt = "==0.9.1"
sentry-sdk = "==0.18.0"
URLObject = "==2.4.3"
whitenoise = "==5.2.0"
django-hashid-field = "^3.1.3"
urllib3 = "~=1.26.5"

[tool.poetry.dev-dependencies]
black = "~=20.8b1"
boto3-stubs = "~=1.17.86"
factory-boy = "~=3.0.1"
flake8 = "~=3.8.2"
freezegun = "~=1.0.0"
ipdb = "^0.13.9"
ipython = "~=7.20.0"
mock = "~=4.0.1"
moto = "==1.3.14"
pylint-django = "~=2.3.0"
pytest-cov = "~=2.10.1"
pytest-django = "~=4.4.0"
pytest-xdist = "~=2.1.0"
requests-mock = "~=1.8.0"
jsondiff = "==1.1.2"
simplejson = "==3.17.2"

[build-system]
requires = ["poetry~=1.1.7"]
build-backend = "poetry.masonry.api"
