[tool.poetry]
name = "market-access-api"
version = "0.51.00"
description = "Market Access API"
authors = [
    "Ferenc Csepregi <feri@31.digital>",
    "James Pacileo <jamespaxi@gmail.com>",
    "Ciaran Dohety <cad106uk@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "~=1.17.86"
celery = "5.2.2"
dj-database-url = "==0.5.0"
Django = "3.2.23"
django-audit-log-middleware = "0.0.4"
django-celery-beat = "2.2.1"
django-environ = "==0.4.5"
django-extensions = "==3.0.9"
django-filter = "==2.4.0"
django-log-formatter-ecs = "==0.0.5"
django-model-utils = "==4.0.0"
django-oauth-toolkit = "==2.1.0"
django-ordered-model = "==3.4.1"
django-pglocks = "==1.0.4"
django-redis = "==4.12.1"
django-simple-history = "==3.4.0"
django-staff-sso-client = "==3.1.0"
djangorestframework = "==3.12.1"
elastic-apm = "~=6.3.0"
Faker = "~=19.3.1"
factory-boy = "~=3.0.1"
gevent = "==23.9.1"
gunicorn = "==20.0.4"
hawkrest = "==1.0.1"
importlib-metadata = "<5.0.0"
notifications-python-client = "==6.0.2"
psycopg2-binary = "==2.9.5"
python-json-logger = "==2.0.0"
raven = "==6.9.0"
requests-toolbelt = "==0.9.1"
sentry-sdk = "1.14.0"
URLObject = "==2.4.3"
whitenoise = "==5.2.0"
django-hashid-field = "^3.1.3"
urllib3 = "~=1.26.18"
time-machine = "^2.8.2"
pytest = "^7.2.0"
certifi = "2023.07.22"
sqlparse = "0.4.4"
cryptography = "~=41.0.6"

[tool.poetry.dev-dependencies]
black = "~=23.11.0"
boto3-stubs = "~=1.17.86"
flake8 = "~=3.8.2"
freezegun = "~=1.0.0"
ipython = "8.10.0"
mock = "~=4.0.1"
moto = "==2.2.16"
pylint-django = "~=2.3.0"
pytest-django = "~=3.10.0"
pytest-xdist = "~=2.1.0"
requests-mock = "~=1.8.0"
jsondiff = "==1.1.2"
simplejson = "==3.17.2"
ipdb = "^0.13.9"
pytest-watch = "^4.2.0"
time-machine = "^2.8.2"
greenlet = "~3.0.0"
coverage = "^7.2.7"
pytest-circleci-parallelized = "^0.1.0"

[build-system]
requires = ["poetry~=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
testpaths = "tests"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

addopts = """
    --reuse-db
    --ds=config.settings.test
"""

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*__init__*",
    "*test_*",
]
include = [
    "api/*",
]
branch = true

[tool.isort]
profile = "black"
